# mother_core_ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
mothercore/: __init__.py  core.py
